merubah file index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Moh Yamin</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="http://wa.me/6285260522163/?text=Hai%2CSaya%20mengetahui%20layanan%20dari%20irfan.capcui.com">Whatsapp me</a>
+                <a href="http://wa.me/6283804141044/?text=Hai%2CSaya%20selamat%20datang%20dari%20mohyamin">Whatsapp me</a>
             </div>
         </div>
     </section>
@@ -229,7 +229,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form action="http://wa.me/6285260522163/?text=Hai%2CSaya%20ingin%20mengetahui%20produk%20layanan%20dari%20irfan.capcui.com">
+                    <form action="http://wa.me/6283804141044/?text=Hai%2CSaya%20ingin%20mengetahui%20anda%20lebihlanjut%20dari%20mohyamin">
                         <div class="fields">
                             <div class="field name">
                                 <input type="text" placeholder="Name" required>
