merubah file index.html

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Bila anda ingin mengetahui saya lebih lanjut bisa menghubungi kontak berikut ini. Saya sangat berterimasih bila kita bisa saling suport.</p>
+                    <p>Bila anda ingin mengetahui saya lebih lanjut bisa menghubungi kontak berikut ini. Saya sangat berterima kasih bila anda menghubungi saya.</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
