merubah file index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Moh Yamin</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="http://wa.me/6283804141044/?text=Hai%2CSaya%20selamat%20datang%20dari%20mohyamin">Whatsapp me</a>
+                <a href="http://wa.me/6283804141044/?text=Hai%2CSaya Yamin,%20selamat%20datang%20dari%20mohyamin">Whatsapp me</a>
             </div>
         </div>
     </section>
