Merubah isi file index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="text">I'm Yamin and I'm a <span class="typing-2"></span></div>
                     <p>Perkenalkan saya Moh Yamin, umur saya 27 tahun tempat tinggal di bogor, lulusan Universitas Bina Sarana Informatikan Jurusan Sistem Informasi lulus pada tahun 2022 Pernah bekerja pada Kantor Kecamatan Bojonggede Sebagai IT Support Selama 4 tahun
 </p>
-                    <a href="#">Download CV</a>
+                    <a href="https://bit.ly/CV_Mohyamin">Download CV</a>
                 </div>
             </div>
             
